kubernetes/apps/media/jellyfin/iot-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-iot
spec:
  hostnames: [jellyfin-iot.lan.jetersen.dev]
  parentRefs:
    - name: envoy-proxy
      namespace: kube-system
      sectionName: jellyfin-iot
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
